<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">com.jenius</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zhong">中</string>
    <string name="dong">东</string>
    <string name="nan">南</string>
    <string name="xi">西</string>
    <string name="bei">北</string>
	<string name="login">登录</string>
	<string name="quxiao">取消</string>
	<string name="username">用户名：</string>
	<string name="password">密码：</string>
</resources>
