<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.com.jenius.MainActivity" >
    <!--android:gravity="center"  -->

    <Button
        android:id="@+id/zhong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/zhong" />
     <Button
         android:id="@+id/dong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/zhong"
        android:layout_centerVertical="true"
        android:text="@string/dong" />
      <Button
        android:id="@+id/nan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zhong"
        android:layout_alignLeft="@id/zhong"
        android:text="@string/nan" />
       <Button
        android:id="@+id/xi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/zhong"
        android:layout_centerVertical="true"
        android:text="@string/xi" />
        <Button
        android:id="@+id/bei"
        android:layout_above="@id/zhong"
        android:layout_alignLeft="@id/zhong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bei" />

</RelativeLayout>
